ZING-37667: update to go1.24 among other things

--- a/project.json
+++ b/project.json
@@ -1,6 +1,5 @@
 {
   "Name": "helloworld",
   "Title": "Hello World Service",
-  "Description": "A sample service to show how the microservice stack works",
-  "Port": "8080"
+  "Description": "A sample service to show how the microservice stack works"
 }
