--- a/template/.gitignore
+++ b/template/.gitignore
@@ -1,5 +1,4 @@
 # The binary itself
-shortlink
 {{Name}}
 
 # Binaries for programs and plugins
@@ -8,22 +7,23 @@ shortlink
 *.so
 *.dylib
 
-# Test binary, build with `go test -c`
-*.test
-
-# Output of the go coverage tools
-**/*.coverprofile
-*.out
-
-coverage/
+# IDE files
 .idea
 *.iml
-.DS_Store
-._.DS_Store
 .vscode/
 
-# JUnit test output
-**/junit.xml
-
-# Swap files
+# Temporary files or OS-specific files
 *.swp
+.DS_Store
+._.DS_Store
+
+# Static analysis and test output
+**/golangci-lint.html
+**/golangci-lint.sarif
+**/golangci-lint.xml
+**/govulncheck.sarif
+**/junit.xml
+coverage/
+**/*.coverprofile
+*.test
+*.out
