--- a/template/ci/Makefile
+++ b/template/ci/Makefile
@@ -1,5 +1,19 @@
-DOCKER_COMPOSE_FILES ?= docker-compose.yml hooks/docker-compose.yml ci/docker-compose.yml
-
+#
+# Zenoss CONFIDENTIAL
+# -------------------
+#
+# This software Copyright (c) Zenoss, Inc. 2025
+# All Rights Reserved.
+#
+# NOTICE:  All information contained herein is, and remains the property of
+# Zenoss Incorporated and its suppliers, if any.  The intellectual and
+# technical concepts contained herein are owned and proprietary to Zenoss
+# Incorporated and its suppliers and may be covered by U.S. and Foreign
+# Patents, patents in process, and are protected by U.S. and foreign trade
+# secret or copyright law. Dissemination of this information or reproduction of
+# any this material herein is strictly forbidden unless prior written
+# permission by an authorized officer is obtained from Zenoss Incorporated.
+#
 include Makefile
 
 IMAGE_NAME   := ${SERVICE_IMAGE}:${IMAGE_TAG}
@@ -12,19 +26,6 @@ REMOTE_IMAGE := ${REGISTRY}/${ALT_SERVICE_IMAGE}:$(if ${REMOTE_TAG},${REMOTE_TAG
 else
 REMOTE_IMAGE := ${REGISTRY}/${SERVICE_IMAGE}:$(if ${REMOTE_TAG},${REMOTE_TAG},${IMAGE_TAG})
 endif
-
-# FIXME: This can be probably be removed once zenkit no longer uses the auth_key.secrets
-define CI_DOCKER_COMPOSE_YAML
-version: "3.3"
-secrets:
-    auth_key:
-        file: $(ROOTDIR)/dev.secret
-endef
-
-ci/docker-compose.yml: export CI_DOCKER_COMPOSE_YAML:=$(CI_DOCKER_COMPOSE_YAML)
-ci/docker-compose.yml:
-	@echo "$$CI_DOCKER_COMPOSE_YAML" > $@
-
 
 .PHONY: IMAGE_NAME_VALID
 IMAGE_NAME_VALID:
@@ -65,4 +66,3 @@ ci/version.env: IMAGE_NAME_VALID
 .PHONY: clean
 clean::
 	rm -f ci/version.env
-	rm -f ci/docker-compose.yml
