--- a/template/manifests/base/hpa.yaml
+++ b/template/manifests/base/hpa.yaml
@@ -1,22 +1,22 @@
 apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
-  name: {{Name}}
+  name: "{{Name}}"
   labels:
-    app: {{Name}}
-    project: {{Name}}
+    app: "{{Name}}"
+    project: "{{Name}}"
 spec:
   minReplicas: 2
   maxReplicas: 16
   metrics:
-  - type: ContainerResource
-    containerResource:
-      container: {{Name}}
-      name: cpu
-      target:
-        type: AverageValue
-        averageValue: 300
+    - type: ContainerResource
+      containerResource:
+        container: "{{Name}}"
+        name: cpu
+        target:
+          type: AverageValue
+          averageValue: 300
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: {{Name}}
+    name: "{{Name}}"
