--- a/template/manifests/base/service.yaml
+++ b/template/manifests/base/service.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{Name}}
+  name: "{{Name}}"
   labels:
-    app: {{Name}}
-    project: {{Name}}
+    app: "{{Name}}"
+    project: "{{Name}}"
 spec:
   ports:
-  - port: 80
-    targetPort: 8080
-    protocol: TCP
-    name: grpc
+    - port: 80
+      targetPort: 8080
+      protocol: TCP
+      name: grpc
   selector:
-    app: {{Name}}
+    app: "{{Name}}"
   type: ClusterIP
